# AliceO21

./: .cmake-format.py  .gitignore  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  README.md
GPU/: CMakeLists.txt
GPU/Common/: CMakeLists.txt  GPUCommonAlgorithm.h  GPUCommonAlgorithmThrust.h  GPUCommonArray.h  GPUCommonChkErr.h  GPUCommonConstants.h  GPUCommonDef.h  GPUCommonDefAPI.h  GPUCommonHelpers.h  GPUCommonLogger.h  GPUCommonMath.h  GPUCommonTransform3D.h  GPUCommonTypeTraits.h  GPUDebugStreamer.h  GPUROOTCartesianFwd.h  GPUROOTSMatrixFwd.h
GPU/GPUTracking/: CMakeLists.txt  GPUTrackingLinkDef_O2.h  GPUTrackingLinkDef_O2_DataTypes.h  kernels.cmake
GPU/GPUTracking/Base/: GPUConstantMem.h  GPUGeneralKernels.cxx  GPUGeneralKernels.h  GPUKernelDebugOutput.cxx  GPUKernelDebugOutput.h  GPUMemoryResource.cxx  GPUMemoryResource.h  GPUParam.cxx  GPUParam.h  GPUParam.inc  GPUParamRTC.h  GPUProcessor.cxx  GPUProcessor.h  GPUReconstruction.cxx  GPUReconstruction.h  GPUReconstructionAvailableBackends.template.h  GPUReconstructionCPU.cxx  GPUReconstructionCPU.h  GPUReconstructionConvert.cxx  GPUReconstructionConvert.h  GPUReconstructionDebug.cxx  GPUReconstructionDeviceBase.cxx  GPUReconstructionDeviceBase.h  GPUReconstructionHelpers.h  GPUReconstructionIO.h  GPUReconstructionIncludes.h  GPUReconstructionIncludesDeviceAll.template.h  GPUReconstructionIncludesITS.h  GPUReconstructionKernelList.template.h  GPUReconstructionKernelMacros.h  GPUReconstructionKernels.h  GPUReconstructionLibrary.cxx  GPUReconstructionProcessing.cxx  GPUReconstructionProcessing.h  GPUReconstructionProcessingKernels.inc  GPUReconstructionThreading.h  GPUReconstructionTimeframe.cxx  GPUReconstructionTimeframe.h  GPUStdSystemHeaders.h
GPU/GPUTracking/DataCompression/: GPUTPCClusterRejection.h  GPUTPCClusterStatistics.cxx  GPUTPCClusterStatistics.h  GPUTPCCompression.cxx  GPUTPCCompression.h  GPUTPCCompressionKernels.cxx  GPUTPCCompressionKernels.h  GPUTPCCompressionTrackModel.cxx  GPUTPCCompressionTrackModel.h  GPUTPCDecompression.cxx  GPUTPCDecompression.h  GPUTPCDecompressionKernels.cxx  GPUTPCDecompressionKernels.h  TPCClusterDecompressionCore.inc  TPCClusterDecompressor.cxx  TPCClusterDecompressor.h  standalone-cluster-dump-entropy-analysed.cxx
GPU/GPUTracking/DataTypes/: CalibdEdxContainer.cxx  CalibdEdxContainer.h  CalibdEdxTrackTopologyPol.cxx  CalibdEdxTrackTopologyPol.h  CalibdEdxTrackTopologySpline.cxx  CalibdEdxTrackTopologySpline.h  GPUConfigDump.cxx  GPUConfigDump.h  GPUDataTypes.cxx  GPUDataTypes.h  GPUHostDataTypes.h  GPUMemorySizeScalers.cxx  GPUMemorySizeScalers.h  GPUNewCalibValues.cxx  GPUNewCalibValues.h  GPUO2DataTypes.h  GPUO2FakeClasses.h  GPUOutputControl.h  GPUSettings.h  GPUTPCClusterOccupancyMap.cxx  GPUTPCClusterOccupancyMap.h  GPUTPCGMMergedTrackHit.h  GPUTPCGMPolynomialField.cxx  GPUTPCGMPolynomialField.h  GPUTPCGeometry.h  GPUTRDDef.h  GPUTRDInterfaceO2Track.h  GPUTRDTrack.cxx  GPUTRDTrack.h  GPUTRDTrack.inc  GPUTRDTrackO2.cxx  GPUTriggerOutputs.h  GPUdEdxInfo.h  TPCPadBitMap.cxx  TPCPadBitMap.h  TPCPadGainCalib.cxx  TPCPadGainCalib.h  TPCZSLinkMapping.cxx  TPCZSLinkMapping.h
GPU/GPUTracking/Debug/: GPUROOTDump.h  GPUROOTDumpCore.cxx  GPUROOTDumpCore.h  GPUTPCClusterFilter.cxx  GPUTPCClusterFilter.h
GPU/GPUTracking/Definitions/: GPUDef.h  GPUDefConstantsAndSettings.h  GPUDefGPUParameters.h  GPUDefMacros.h  GPUDefParameters.template.h  GPUDefParametersConstants.h  GPUDefParametersDefault.h  GPUDefParametersDefaults.h  GPUDefParametersLoad.template.inc  GPUDefParametersRuntime.template.h  GPUDefParametersWrapper.h  GPUGetConstexpr.h  GPULogging.h  GPUSettingsList.h  clusterFinderDefs.h
GPU/GPUTracking/Global/: GPUChain.cxx  GPUChain.h  GPUChainITS.cxx  GPUChainITS.h  GPUChainTracking.cxx  GPUChainTracking.h  GPUChainTrackingClusterizer.cxx  GPUChainTrackingCompression.cxx  GPUChainTrackingDebug.h  GPUChainTrackingDebugAndProfiling.cxx  GPUChainTrackingDefs.h  GPUChainTrackingIO.cxx  GPUChainTrackingMerger.cxx  GPUChainTrackingRefit.cxx  GPUChainTrackingSectorTracker.cxx  GPUChainTrackingSliceTracker.cxx  GPUChainTrackingTRD.cxx  GPUChainTrackingTransformation.cxx  GPUErrorCodes.h  GPUErrors.cxx  GPUErrors.h  GPUTrackingInputProvider.cxx  GPUTrackingInputProvider.h
GPU/GPUTracking/ITS/: GPUITSFitter.cxx  GPUITSFitter.h  GPUITSFitterKernels.cxx  GPUITSFitterKernels.h  GPUITSTrack.h
GPU/GPUTracking/Interface/: GPUO2Interface.cxx  GPUO2Interface.h  GPUO2InterfaceConfigurableParam.h  GPUO2InterfaceConfiguration.h  GPUO2InterfaceDisplay.cxx  GPUO2InterfaceDisplay.h  GPUO2InterfaceQA.h  GPUO2InterfaceRefit.h
GPU/GPUTracking/Merger/: GPUTPCGMBorderTrack.h  GPUTPCGMMergedTrack.h  GPUTPCGMMerger.cxx  GPUTPCGMMerger.h  GPUTPCGMMergerDump.cxx  GPUTPCGMMergerGPU.cxx  GPUTPCGMMergerGPU.h  GPUTPCGMMergerTypes.h  GPUTPCGMO2Output.cxx  GPUTPCGMO2Output.h  GPUTPCGMPhysicalTrackModel.cxx  GPUTPCGMPhysicalTrackModel.h  GPUTPCGMPolynomialFieldManager.cxx  GPUTPCGMPolynomialFieldManager.h  GPUTPCGMPropagator.cxx  GPUTPCGMPropagator.h  GPUTPCGMSectorTrack.cxx  GPUTPCGMSectorTrack.h  GPUTPCGMSliceTrack.cxx  GPUTPCGMSliceTrack.h  GPUTPCGMTrackParam.cxx  (+4 more)
GPU/TPCFastTransformation/: BandMatrixSolver.cxx  BandMatrixSolver.h  CMakeLists.txt  ChebyshevFit1D.cxx  ChebyshevFit1D.h  CorrectionMapsHelper.cxx  CorrectionMapsHelper.h  MultivariatePolynomial.h  MultivariatePolynomialHelper.cxx  MultivariatePolynomialHelper.h  NDPiecewisePolynomials.h  NDPiecewisePolynomials.inc  Spline.cxx  Spline.h  Spline1D.cxx  Spline1D.h  Spline1DHelper.cxx  Spline1DHelper.h  Spline1DHelperOld.cxx  Spline1DHelperOld.h  Spline1DSpec.cxx  Spline1DSpec.h  Spline2D.cxx  Spline2D.h  Spline2DHelper.cxx  Spline2DHelper.h  Spline2DSpec.cxx  Spline2DSpec.h  SplineHelper.cxx  SplineHelper.h  SplineSpec.cxx  SplineSpec.h  SplineUtil.h  SymMatrixSolver.cxx  SymMatrixSolver.h  TPCFastSpaceChargeCorrection.cxx  TPCFastSpaceChargeCorrection.h  TPCFastSpaceChargeCorrectionMap.cxx  TPCFastSpaceChargeCorrectionMap.h  TPCFastTransform.cxx  (+7 more)
GPU/Utils/: CMakeLists.txt  FlatObject.h
GPU/documentation/: build-O2.md  build-standalone.md
(+1154 files in other folders)
